deleted class flipped-on-load

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <aside class="sidebar" data-sidebar>
             <div class="sidebar-info">
                 <div class="flip-avatar">
-                    <div class="avatar-box flipped-on-load">
+                    <div class="avatar-box">
                         <figure class="front-avatar">
                             <img src="img/avatar.png" alt="avatar-1">
                         </figure>
