adding project graphic design

--- a/index.html
+++ b/index.html
@@ -732,6 +732,76 @@
                             <p class="project-category">Graphic Design</p>
                         </li>
                         <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/cendol.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Sticker Milky Cendol Brown Sugar</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/cendol-1.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Sticker Milky Cendol Regular</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/isra.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Banner Isra' Mi'raj</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/logitech.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Redesign Logo Logitech</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/mie.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Banner Mie Ayam</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+                        
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/mie-1.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Banner Mie Ayam</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="graphic design">
+                            <figure class="project-img design">
+                                <img src="img/project/talent.jpg" alt="" loading="lazy">
+                            </figure>
+                            <h3 class="project-title">Poster Talent Short Movie</h3>
+                            <p class="project-category">Graphic Design</p>
+                        </li>
+                        <!-- Project Item End -->
                     </ul>
                 </section>
             </article>
