adding link project design graphic

--- a/index.html
+++ b/index.html
@@ -585,11 +585,16 @@
                     <ul class="project-list">
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/packaging-cylinder-tahupee-display.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Packaging Cylinder Tahupee</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1o2sBfTS-Y6I7ytyEJ_KQO3wBxtZHZIgN/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/packaging-cylinder-tahupee-display.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Packaging Cylinder Tahupee</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
@@ -640,21 +645,31 @@
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/packaging-snack-tahupee-display.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Packaging Snack Tahupee</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1wA2IoZl99Iq4XgGSfvHvWOQdNxX_Afl5/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/packaging-snack-tahupee-display.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Packaging Snack Tahupee</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/logo-tahupee-display.png" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Logo Tahupee</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1wA2IoZl99Iq4XgGSfvHvWOQdNxX_Afl5/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/logo-tahupee-display.png" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Logo Tahupee</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
@@ -675,11 +690,16 @@
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/mata_display.png" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Poster Mata</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1Qy_CmvI_wa7p-VtLJT-No0wkjg_TEAx4/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/mata_display.png" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Poster Mata</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
@@ -715,91 +735,136 @@
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/e-sport_display.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">E-Sport Winner</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/drive/folders/1ziWvv_gZN1mmqou_8g82D3zyuofCxocE?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/e-sport_display.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">E-Sport Winner</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/AR.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Logo AR Komputer</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/11l_4wEOhhViyV9EzHR1SdH--Cz0hF4fe/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/AR.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Logo AR Komputer</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/cendol.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Sticker Milky Cendol Brown Sugar</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1z23HaRgGSzA8FozLAGmy6-7MhnTvcmAR/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/cendol.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Sticker Milky Cendol Brown Sugar</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/cendol-1.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Sticker Milky Cendol Regular</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1yRRHnDmR4BXoNRh0GmjGhz4DJckf6eoJ/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/cendol-1.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Sticker Milky Cendol Regular</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/isra.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Banner Isra' Mi'raj</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1o5PKswK8CfMxtVODD4BWJxaIutLkL2Lv/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/isra.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Banner Isra' Mi'raj</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/logitech.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Redesign Logo Logitech</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1GIO0QdJIBLEDfmXfL9oN_OKs0WNW8Cdr/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/logitech.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Redesign Logo Logitech</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/mie.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Banner Mie Ayam</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1789_Vt8kDcw8M9ShIUvfqLkj5hNU3LeE/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/mie.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Banner Mie Ayam</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
                         
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/mie-1.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Banner Mie Ayam</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/1WYNNeCBu0CK6E3WKU0lM-y1vlxCJp_wF/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/mie-1.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Banner Mie Ayam</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
 
                         <!-- Project Item Start -->
                         <li class="project-item active" data-filter-item data-category="graphic design">
-                            <figure class="project-img design">
-                                <img src="img/project/talent.jpg" alt="" loading="lazy">
-                            </figure>
-                            <h3 class="project-title">Poster Talent Short Movie</h3>
-                            <p class="project-category">Graphic Design</p>
+                            <a href="https://drive.google.com/file/d/18qKdHlogZs6slRFxOMD21Vt5aIaDJqp4/view?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/talent.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Poster Talent Short Movie</h3>
+                                <p class="project-category">Graphic Design</p>
+                            </a>
                         </li>
                         <!-- Project Item End -->
                     </ul>
