added category inDesign project

--- a/index.html
+++ b/index.html
@@ -548,6 +548,10 @@
                         </li>
 
                         <li class="filter-item">
+                            <button data-filter-btn>InDesign</button>
+                        </li>
+
+                        <li class="filter-item">
                             <button data-filter-btn>Photography</button>
                         </li>
                     </ul>
@@ -573,6 +577,10 @@
 
                             <li class="select-item">
                                 <button data-select-item>Graphic Design</button>
+                            </li>
+
+                            <li class="select-item">
+                                <button data-select-item>InDesign</button>
                             </li>
 
                             <li class="select-item">
@@ -864,6 +872,51 @@
                                 </figure>
                                 <h3 class="project-title">Poster Talent Short Movie</h3>
                                 <p class="project-category">Graphic Design</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1elLLLwlgZVTtt3pQAsouR-5wUPQ5t5Wl?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/katalog-sepatu.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Katalog Sepatu Olahraga</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/18BQI9Ihgq83saMGNYUBGWmBtOiwqvtVu?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/brosur-naturio.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Brosur Naturio</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1dtquqSvP1oSgbD1Q4er8lPCKosNxSwRP?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/menu-burger.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Menu Burger Nusantara</h3>
+                                <p class="project-category">InDesign</p>
                             </a>
                         </li>
                         <!-- Project Item End -->
